--- a/analyse.html
+++ b/analyse.html
@@ -75,21 +75,12 @@
                                     Mais cette vision se heurte rapidement à la réalité. 
                                     Le pouvoir d’accès que ces logiciels exigent ouvre aussi la porte à des usages qui n’ont plus rien à voir avec la protection. 
                                     Certaines entreprises collectent des données pour les revendre, d’autres exploitent les comportements pour générer du profit ou orienter l’attention. 
-                                    Dans ces cas, l’effet réel de l’intrusion n’est plus la sécurité, mais la captation. On passe d’un outil protecteur à un système de contrôle. 
+                                    Dans ces cas, l’effet réel de l’intrusion n’est plus la sécurité, mais la captation. On passe d’un outil qui protège à un système de contrôle. 
                                     Et une fois que ces effets apparaissent, même partiellement, le calcul moral change complètement. 
                                     On ne parle plus de protection, mais de méfiance généralisée, d’environnement numérique appauvri, de société fragmentée.
                                 </p>
                                 <p>
-                                    Il faut aussi regarder les choses sur la durée. 
-                                    Ce type de surveillance produit des effets qui ne sont pas toujours visibles tout de suite. 
-                                    Au départ, l’utilisateur accepte parce qu’il y a une raison, se protéger, éviter un danger. Mais au fil du temps, il s’y habitue. 
-                                    Il finit par ne plus y penser. Et c’est là que l’impact devient plus profond. On s’autocensure sans s’en rendre compte. 
-                                    On limite sa liberté d’expression, ses recherches, ses expérimentations, simplement parce qu’on sait que quelque chose ou quelqu’un observe. 
-                                    Cela peut sembler anodin à court terme, mais ce sont justement ces ajustements silencieux qui transforment une société. 
-                                    Une perte d’autonomie, même diffuse, finit par affaiblir la capacité de chacun à réfléchir librement et à remettre en question ce qui l’entoure.
-                                </p>
-                                <p>
-                                    Ce glissement progressif est d’ailleurs ce qu’il y a de plus inquiétant. 
+                                    Ce glissement progressif de l'implication des logiciels dans notre vie privée est d’ailleurs ce qu’il y a de plus inquiétant. 
                                     À force de considérer l’exception comme normale, on change notre seuil de tolérance. 
                                     Ce qui était autrefois choquant devient habituel. Et ce que l’on accepte aujourd’hui redéfinit ce que la génération suivante trouvera acceptable demain. 
                                     Ce transfert est une conséquence à part entière, et elle pèse lourd dans l’analyse morale. 
@@ -108,7 +99,7 @@
                                     Si les conséquences sont globalement destructrices, alors il faut revoir l’outil, ses usages, et le cadre dans lequel il s’inscrit.
                                 </p>
                                 <p>
-                                    Il devient alors essentiel de poser des garde-fous concrets. 
+                                    Il devient alors essentiel de poser des limites concrets. 
                                     Limiter les privilèges techniques aux fonctions strictement nécessaires. Imposer une transparence sur l’usage réel des données. 
                                     Renforcer les mécanismes de contrôle et de responsabilité. 
                                     Ce sont ces conditions qui permettront de préserver les bénéfices sans encourager les dérives. 
