--- a/team.html
+++ b/team.html
@@ -80,7 +80,11 @@
                             </div>
                             <div class="col-md-8">
                                 <div class="card-body">
-                                    <p class="card-text">avis</p>
+                                    <p class="card-text">Selon moi la sécurité ne devrait pas être être aussi opacte dans son fonctionnement. Je préfère que les personnes 
+                                    soient éduquer sur la protection de leurs données en ligne que de remettre leur confiance dans un logiciel. Dans un monde où tout est 
+                                    marchandable, la conscientisation de la valeur de nos données devrait être primodiale. Les dérives, qui ont déjà eu lieu, sont trop lourdes pour se permettre d'avoir des 
+                                    logiciels aussi intrusifs sur nos machines. Je ne dis pas qu'il ne faut utiliser aucun outil de détection ou de protection mais être capable
+                                    d'estimer sa pertinence et en étant conscient des implications de cette utilisations.</p>
                                 </div>
                             </div>
                         </div>
