avis-page-team-simon

--- a/team.html
+++ b/team.html
@@ -119,7 +119,7 @@
                             </div>
                             <div class="col-md-8">
                                 <div class="card-body">
-                                    <p class="card-text">avis</p>
+                                    <p class="card-text">Je trouve que, de part l'obscur fonctionnement des antivirus et notre inconnaissance généralisée de leur utilisation, il est peut-être plus dangereux de les utiliser. En faisant preuve d'un minimum de prévoyance et de sécurité, nous pouvons écarter de nombreux potentiels problèmes. A mon avis, il vaut mieux prôner une éducation informatique qu'inciter les gens à télécharger un logiciel qui a accès à énormément de leurs données.</p>
                                 </div>
                             </div>
                         </div>
