--- a/team.html
+++ b/team.html
@@ -87,7 +87,7 @@
                 <div class="card mb-4 mx-auto" style="max-width: 900px;">
                     <div class="row g-0 align-items-center">
                         <div class="col-md-4 text-center">
-                            <img src="images/#" class="img-fluid rounded-start" style="max-height: 200px;"
+                            <img src="images/Noah.jpg" class="img-fluid rounded-start" style="max-height: 200px;"
                                 alt="Noah Mine">
                             <p class="fw-bold mt-2 mb-0">Noah Mine</p>
                         </div>
