Update synthese.html (recommandations)

--- a/synthese.html
+++ b/synthese.html
@@ -80,7 +80,11 @@
                     <div class="mb-5">
                         <h4>3. Conclusion générale et recommandations</h4>
                         <p class="text-muted">
-                            blabla
+                            Pour terminer, voici quelques recommandations:
+                            <br>
+                            Côté utilisateur, nous leur recommandons de s'informer sur les logiciels qu'ils utilisent et de préférer ceux qui sont transparents vis à vis de leurs pratiques de collecte et stockage de données, et encourageons l'adoption de logiciels libres et certifiés lorsque possible. Nous recommandons également d'exiger des garanties avant d'installer un logiciel ayant un pouvoir important sur leur systèeme; la confiance doit se mériter.
+                            <br>
+                            Pour ce qui est des entreprises, nous recommandons d'assurer une transparence sur leur utilisation des données et sur leurs démarches de protection, et nous préférons largement que des développeurs travaillent avec des outils de protection plutôt qu'avec des outils de contrôle/de dépendance. 
                         </p>
                     </div>
                 </div>
