--- a/synthese.html
+++ b/synthese.html
@@ -80,6 +80,9 @@
                     <div class="mb-5">
                         <h4>3. Conclusion générale et recommandations</h4>
                         <p class="text-muted">
+                            En conclusion, on constate que la grande majorité des utilisateurs d'aujourd'hui accordent une confiance très, voire trop, importante directement aux logiciels à forts privilèges, et selon les différentes éthiques que nous avons analysées, la confiance qu'ils accordent devrait être plus réfléchie et devrait se mériter. Pour qu'elle se mérite, c'est aux développeurs et commerçants des antivirus de mettre en place une démarche éthique au niveau de la protection de l'utilisateur,
+                            ainsi que de rendre accessible cette démarche au public cible.
+                            <br>
                             Pour terminer, voici quelques recommandations:
                             <br>
                             Côté utilisateur, nous leur recommandons de s'informer sur les logiciels qu'ils utilisent et de préférer ceux qui sont transparents vis à vis de leurs pratiques de collecte et stockage de données, et encourageons l'adoption de logiciels libres et certifiés lorsque possible. Nous recommandons également d'exiger des garanties avant d'installer un logiciel ayant un pouvoir important sur leur systèeme; la confiance doit se mériter.
