--- a/team.html
+++ b/team.html
@@ -25,7 +25,7 @@
                 </button>
                 <div class="collapse navbar-collapse" id="navbar_global">
                     <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
-                        <li class="nav-item"><a class="nav-link" href="questionnement.html">Questionnement</a></li>
+                        <li class="nav-item"><a class="nav-link" href="index.html">Questionnement</a></li>
                         <li class="nav-item dropdown">
                             <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownEnquete" role="button"
                                 data-bs-toggle="dropdown" aria-expanded="false">
